--- a/devinmajordotcom/Views/MyHome/_Favorites.cshtml
+++ b/devinmajordotcom/Views/MyHome/_Favorites.cshtml
@@ -1,16 +1,16 @@
-﻿@model List<devinmajordotcom.ViewModels.SiteLinkViewModel>
+﻿@model devinmajordotcom.ViewModels.MyHomeViewModel
 @{ 
     var linkCount = 1;
     var newRowHtml = "</div><br/><div class='row'>";
 }
 <div class="row">
-    @foreach (var link in Model.Where(x => x.IsEnabled))
+    @foreach (var link in Model.FavoritesAndBookmarks.Where(x => x.IsEnabled))
     {
 
         <div class="col-md-3 col-sm-6">
             <div class="work-thumb">
                 <a href="@link.URL" target="_blank" class="">
-                    <img src="@String.Format("data:image/jpg;base64,{0}", Convert.ToBase64String(link.BackgroundImage))" class="img-responsive" alt="Work">
+                    <img src="@String.Format("data:image/jpg;base64,{0}", Convert.ToBase64String(link.BackgroundImage))" class="img-responsive" alt="Link">
                     <div class="work-info">
                         <h3>@link.DisplayName</h3>
                         <small>@link.Description</small>
@@ -26,5 +26,34 @@
 
         linkCount++;
 
+    }
+    @if (Model.CurrentUserViewModel.UserIsLoggedIn)
+    {
+        <div class="col-md-3 col-sm-6">
+            <div class="work-thumb">
+                @{
+                    var uploadButton = Ajax.ActionLink("REPLACE", "_AddFavoriteForm", "MyHome",
+                        new { userID = Model.CurrentUserViewModel.UserID },
+                        new AjaxOptions
+                        {
+                            HttpMethod = "GET",
+                            InsertionMode = InsertionMode.Replace,
+                            OnComplete = "InitializeModal('#formModalAddEditFavorites', 'Add New Item');",
+                            OnFailure = "SettingsUpdateFailure();",
+                            UpdateTargetId = "formModalBodyHolder"
+                        },
+                        new
+                        {
+
+                        }).ToHtmlString().Replace("REPLACE", "<img src=" + String.Format("data:image/jpg;base64,{0}", Convert.ToBase64String(Model.UserConfig.AddNewFavoriteImage)) + " class='img-responsive' alt='Work'><div class=\"work-info\"><h3>+</h3><small>Add New Item</small></div>");
+                }
+                @Html.Raw(uploadButton)
+            </div>
+        </div>
+
+        if (linkCount % 4 == 0)
+        {
+            @Html.Raw(newRowHtml)
+        }        
     }
 </div>
