--- a/devinmajordotcom/Views/MyHome/_Favorites.cshtml
+++ b/devinmajordotcom/Views/MyHome/_Favorites.cshtml
@@ -38,7 +38,7 @@
                         {
                             HttpMethod = "GET",
                             InsertionMode = InsertionMode.Replace,
-                            OnComplete = "InitializeModal('#formModalAddEditFavorites', 'Add New Item');",
+                            OnComplete = "InitializeModal('#formModalAddEdit', 'Add New Item');",
                             OnFailure = "SettingsUpdateFailure();",
                             UpdateTargetId = "formModalBodyHolder"
                         },
