--- a/devinmajordotcom/Views/MyHome/_BlogPosts.cshtml
+++ b/devinmajordotcom/Views/MyHome/_BlogPosts.cshtml
@@ -9,7 +9,7 @@
     {
         <div class="col-md-6 col-sm-6 text-center">
             <div class="media blog-thumb work-thumb" style="border: 1px solid white; background-color: transparent;">
-                <div class="work-info">
+                <div class="work-info" style="height: 275px;">
                     @{
                         var uploadButton = Ajax.ActionLink("REPLACE", "_AddBlogPostForm", "MyHome",
                             new {userID = Model.CurrentUserViewModel.UserID},
