--- a/devinmajordotcom/Views/Shared/_BlogLayout.cshtml
+++ b/devinmajordotcom/Views/Shared/_BlogLayout.cshtml
@@ -21,7 +21,7 @@
     @Styles.Render("~/Content/FineUploader")
 
 </head>
-<body style="background-color: gray;">
+<body class="blogBody">
 
 <!-- PRE LOADER -->
 <section class="preloader">
