--- a/devinmajordotcom/Views/MyHome/BlogPost.cshtml
+++ b/devinmajordotcom/Views/MyHome/BlogPost.cshtml
@@ -1,7 +1,7 @@
 ﻿@using devinmajordotcom.ViewModels
 @model BlogPostViewModel
 @{
-    Layout = "../Shared/BlogLayout.cshtml";
+    Layout = "../Shared/_BlogLayout.cshtml";
 }
 
 <div class="container">
@@ -9,16 +9,16 @@
     <div class="row">
         
         <div class="col-lg-12">
-            <h1 class="mt-4">@Model.PostTitle</h1>
+            <h1 class="mt-4 blogHoverItem">@Model.PostTitle</h1>
             <p class="lead">
                 Authored by:
-                <a href="#">@Model.AuthorUserName</a>
+                <a href="#" class="blogHoverItem">@Model.AuthorUserName</a>
             </p>
             <hr />
-            <p><i class="fa fa-clock-o"></i>&nbsp;&nbsp;Posted on @Model.CreatedOn</p>
+            <p class="blogHoverItem"><i class="fa fa-clock-o"></i>&nbsp;&nbsp;Posted on @Model.CreatedOn</p>
             @if (Model.ModifiedOn != Model.CreatedOn)
             {
-                <p><i class="fa fa-clock-o"></i>&nbsp;&nbsp;Last edited on @Model.ModifiedOn</p>
+                <p class="blogHoverItem"><i class="fa fa-clock-o"></i>&nbsp;&nbsp;Last edited on @Model.ModifiedOn</p>
             }
             <hr />
         </div>
@@ -38,54 +38,85 @@
     </div>
 
     <div class="row">
-        <div class="col-lg-12">
+        <div class="col-lg-12" id="commentsContainer">
 
-            <div class="card my-4">
-                <h5 class="card-header">Leave a Comment:</h5>
-                <div class="card-body">
-                    <form>
-                        <div class="form-group">
-                            <textarea class="form-control" rows="3"></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                    </form>
+            <div class="media mb-4 comment">
+                <div class="media-body">
+                    <h5 class="mt-0 blogHoverItem"><i class="fa fa-clock-o"></i>&nbsp;&nbsp;@Model.ModifiedOn</h5>
+                    <h5 class="mt-0 blogHoverItem"><span class="glyphicon glyphicon-comment"></span>&nbsp;&nbsp;Commenter Name said:</h5>
+                    <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
                 </div>
             </div>
-
-            <div class="media mb-4">
-                <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+            
+            <div class="media mb-4 comment">
                 <div class="media-body">
-                    <h5 class="mt-0">Commenter Name</h5>
+                    <h5 class="mt-0"><span class="glyphicon glyphicon-comment"></span>&nbsp;&nbsp;Commenter Name said:</h5>
                     Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
                 </div>
             </div>
-
-            <div class="media mb-4">
-                <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+            
+            <div class="media mb-4 comment">
                 <div class="media-body">
-                    <h5 class="mt-0">Commenter Name</h5>
+                    <h5 class="mt-0"><span class="glyphicon glyphicon-comment"></span>&nbsp;&nbsp;Commenter Name said:</h5>
                     Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-
-                    <div class="media mt-4">
-                        <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
-                        <div class="media-body">
-                            <h5 class="mt-0">Commenter Name</h5>
-                            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-                        </div>
-                    </div>
-
-                    <div class="media mt-4">
-                        <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
-                        <div class="media-body">
-                            <h5 class="mt-0">Commenter Name</h5>
-                            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-                        </div>
-                    </div>
-
+                </div>
+            </div>
+            
+            <div class="media mb-4 comment">
+                <div class="media-body">
+                    <h5 class="mt-0"><span class="glyphicon glyphicon-comment"></span>&nbsp;&nbsp;Commenter Name said:</h5>
+                    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                </div>
+            </div>
+            
+            <div class="media mb-4 comment">
+                <div class="media-body">
+                    <h5 class="mt-0"><span class="glyphicon glyphicon-comment"></span>&nbsp;&nbsp;Commenter Name said:</h5>
+                    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                </div>
+            </div>
+            
+            <div class="media mb-4 comment">
+                <div class="media-body">
+                    <h5 class="mt-0"><span class="glyphicon glyphicon-comment"></span>&nbsp;&nbsp;Commenter Name said:</h5>
+                    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                </div>
+            </div>
+            
+            <div class="media mb-4 comment">
+                <div class="media-body">
+                    <h5 class="mt-0"><span class="glyphicon glyphicon-comment"></span>&nbsp;&nbsp;Commenter Name said:</h5>
+                    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                </div>
+            </div>
+            
+            <div class="media mb-4 comment">
+                <div class="media-body">
+                    <h5 class="mt-0"><span class="glyphicon glyphicon-comment"></span>&nbsp;&nbsp;Commenter Name said:</h5>
+                    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
                 </div>
             </div>
 
         </div>
     </div>
+    
+    <br/>
+    
+    <div class="row">
+        <div class="col-lg-12">
+            <h4>Leave a Comment...</h4>
+            <textarea rows="5" class="tinymce"></textarea>
+            <br/>
+            <button style="width:100%" type="submit" class="btn btn-primary">Submit</button>
+        </div>
+    </div>
+    
+    <br/>
 
 </div>
+
+@section scripts {
+    <script>
+        RefreshTinyMce();
+    </script>
+}
